--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,15 +32,12 @@ body {
   color: black;
 }
 
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
+.header-left {
+    margin-top: 12px;
 }
-
 .header-right {
-  float: right;
+    float: right;
 }
-
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
@@ -51,4 +48,284 @@ body {
   .header-right {
     float: none;
   }
+}
+
+/*********************************************************/
+/*********************** UNIVERSAL ***********************/
+/*********************************************************/
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
+
+ol, ul { list-style: none; }
+
+table { border-collapse: collapse; border-spacing: 0; }
+
+caption, th, td { text-align: left; font-weight: normal; vertical-align: middle; }
+
+q, blockquote { quotes: none; }
+
+    q:before, q:after, blockquote:before, blockquote:after { content: ""; content: none; }
+
+a img { border: none; }
+
+article, aside, details, figcaption, figure, footer, hgroup, menu, nav, section, summary { display: block; }
+
+strong { font-weight: bold; }
+
+input[type="text"], input[type="password"] { outline: 0; font-family:'Montserrat-Regular'; border: solid 1px #dddddd; background-repeat: no-repeat; vertical-align: middle; margin: 5px; }
+
+    input[type="text"].correct, input[type="password"].correct { background-color: #d5ebff; border: solid 1px #9ed1ff; background-image: url("../images/blue_checkmark.png"); background-position: 98% center; }
+
+        input[type="text"].correct:focus, input[type="password"].correct:focus { background-color: #d5ebff; border: 1px solid #dddddd; }
+
+    input[type="text"].wrong, input[type="password"].wrong { background-color: #fff5ea; border: solid 1px #ffc390; background-image: url("../images/orange_cross_orange.png"); background-position: 98% center; }
+
+        input[type="text"].wrong:focus, input[type="password"].wrong:focus { background-color: #fff5ea; border: solid 1px #ffc390; }
+
+    input[type="text"].large, input[type="password"].large { width: 200px; height: 35px; line-height: 35px; margin: 5px; padding: 0 25px 0 5px; }
+
+    input[type="text"].medium, input[type="password"].medium { width: 263px; height: 35px; line-height: 35px; margin-right: 13px; }
+
+    input[type="text"]:focus, input[type="password"]:focus { background-color: #fff; border: solid 1px #ffc8a3; outline: 0; }
+
+#main-wrapper { position: relative; overflow: hidden; }
+#mainbody { padding-bottom: 30px; }
+.content-wrapper { overflow: hidden; clear: both; }
+i
+{font-style: italic;
+}
+
+sup{
+	display: inline-block;
+	vertical-align: super;
+	line-height: initial;
+	font-size: small;
+}
+
+
+#please-wait-dialog, #system-error-modal { background-color: #fff; display: none; left: 0px; top: 40px; padding-bottom: 25px; position: absolute; z-index: 400; -moz-box-shadow: 3px 0px 20px 0px #444444; -webkit-box-shadow: 0px 20px 5px 0px #444444; box-shadow: 0px 0px 20px 0px #444444; }
+
+#modal-title-bar { background-color: #F3F3F3; clear: both; height: 17px; padding: 10px; text-align: left; }
+
+#modal-title { font-size: 14px; font-weight: 500; float: left; }
+
+    #modal-title h1 { font-size: 14px !important; }
+
+#modal-close-icon { float: right; height: 21px; margin-left: 10px; width: 21px; position: relative; top: -3px; }
+
+    #modal-close-icon img { cursor: pointer; }
+
+#modal-desc { clear: both; }
+
+    #modal-desc p { font-size: 12px !important; margin: 15px 0 !important; }
+
+#please-wait-dialog .inner,
+#system-error-modal .inner { height: inherit; margin: 0 10px 20px; padding: 0 10px 15px; }
+
+.please-wait-image { text-align: center; padding-top: 44px; }
+
+.please-wait-text { color: #3d3d3d; text-transform: uppercase; font-size: 14px; text-align: center; padding-top: 20px; }
+
+#please-wait-continue { text-transform: none; }
+
+.modal-error { background: #F2F2F2; /* Old browsers */ background: -moz-linear-gradient(top, #FFFFFF 0%, #F2F2F2 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F2F2F2)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #FFFFFF 0%,#F2F2F2 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #FFFFFF 0%,#F2F2F2 100%); /* Opera 11.10+ */ background: -ms-linear-gradient(top, #FFFFFF 0%,#F2F2F2 100%); /* IE10+ */ background: linear-gradient(to bottom, #FFFFFF 0%,#F2F2F2 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#F2F2F2',GradientType=0 ); /* IE6-9 */ border: 1px solid #cecece; border-radius: 5px; color: #f00; clear: both; color: #f00; display: none; width: 95% !important; padding: 5px; }
+
+    .modal-error .modal-error-title { color: #f00; font-weight: 600; margin: 5px 0; text-transform: uppercase; }
+
+    .modal-error .modal-error-desc { color: #f00; font-size: 11px; font-weight: 400; padding-left: 10px; }
+
+        .modal-error .modal-error-desc p { color: #f00; font-size: 13px; margin-bottom: 5px !important; }
+
+#modal-text { float: left; margin-left: 0 !important; padding-left: 0 !important; margin-right: 0 !important; width: 100%; }
+
+.modal-label-wrapper { clear: both; }
+
+
+.modal-label-wrapper .label-help-text { float: right; font-size: 12px; font-weight: 400; }
+
+
+.modal-label-wrapper .label-help-text a { color: #de4915; text-decoration: underline; }
+
+    .modal-label-wrapper .label-help-text a:hover { color: #333; text-decoration: underline; }
+    
+.modal-actions-wrapper { clear: both; margin-top: 5px; width: 100%; }
+
+    .modal-actions-wrapper .modal-actions-help-text { float: left; margin-right: 10px; position: relative; top: 8px; }
+
+        .modal-actions-wrapper .modal-actions-help-text a { color: #de4915; text-decoration: none; }
+
+            .modal-actions-wrapper .modal-actions-help-text a:hover { color: #333; text-decoration: underline; }
+
+    .modal-actions-wrapper .modal-submit,
+    .modal-actions-wrapper .modal-cancel { float: right; }
+
+.modal-submit { background: #F2F2F2; /* Old browsers */ background: -moz-linear-gradient(top, #FFFFFF 0%, #F2F2F2 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F2F2F2)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #FFFFFF 0%,#F2F2F2 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #FFFFFF 0%,#F2F2F2 100%); /* Opera 11.10+ */ background: -ms-linear-gradient(top, #FFFFFF 0%,#F2F2F2 100%); /* IE10+ */ background: linear-gradient(to bottom, #FFFFFF 0%,#F2F2F2 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#F2F2F2',GradientType=0 ); /* IE6-9 */ border: 1px solid #cecece; border-radius: 5px; color: #333; font-weight: 600; padding: 4px 2.75em; text-align: left; font-size: 12px; }
+
+.modal-cancel { background-color: #e0e0e0; color: #999; font-weight: 600; height: 25px; padding: 5px 1em; text-align: left; width: inherit; border: none; font-size: 12px; position: relative; left: 90px; border: 1px solid #999; }
+
+#modal-image { margin-right: 0 !important; }
+
+#opaque { position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 99; display: none; background-color: black; filter: alpha(opacity=40); opacity: 0.4; }
+
+.breaker { clear: both; }
+
+.content-wrapper { margin: 0 auto; width: 960px; text-align:left;}
+
+main { text-align: center;}
+
+
+article, section { display:block;}
+
+#mainbody {
+width: 790px;
+float: left;
+}
+
+body { 
+	line-height: 1; 
+	font-family: "Montserrat-Regular"; 
+	font-size: 12px; 
+	color: #333333; 
+	background: #ffffff; 
+
+}
+
+a {
+	color: #AD1F23;
+	text-decoration: none;
+	cursor: pointer;
+}
+	a:hover {
+		color: #671215;
+	}
+.tr-primary { color: #AD1F23; }
+
+.floated-header-wrapper { background-color: #ddd; }
+
+h1, h2, h3, h4, h5, h6 { font-family: "Montserrat-Light"; color: #333333; line-height: 1.1em; font-weight: normal; margin: 0px; text-transform: uppercase; }
+
+h1 { font-size: 62px; margin-bottom: 10px;  line-height: .8em; }
+    h1 .sub { font-size: 42px; display: block; }
+h2 { font-size: 24px; margin-bottom: 13px;}
+
+h3 { font-size: 14px; margin-bottom: 13px; font-family: "Montserrat-Medium"; }
+
+h4 { font-size: 14px; margin-bottom: 13px; font-weight: bold; }
+
+h5 { font-size: 14px; margin-bottom: 13px; font-weight: bold; }
+
+.tr-crimson { color: #AD1F23; }
+
+.form-field-h { font-size: 30px; font-family: "Montserrat-Light"; text-transform:uppercase}
+
+.list-style-2 h4 { font-family: "Montserrat-Medium"; font-weight: normal; text-transform: uppercase; font-size: 21px; }
+
+.list-style-2 h5 { font-family: "Montserrat-Light"; font-size: 13px; font-weight: bold; color: #333333; text-transform: uppercase; margin-bottom: 10px; }
+
+.view-details-link { color: #F37320; text-transform: uppercase; }
+
+p { font-family: "Montserrat-Light"; font-size: 15px; color: #333333; line-height: 1.3em; margin-bottom: 10px; margin-top: 0px; }
+
+h p.last { margin-bottom: 0; }
+
+hr { border-top: 1px solid #cccccc; padding: 0; margin: 35px 5px; }
+
+.upper { text-transform: uppercase; }
+
+.hidden { display: none; }
+
+/******************************************************************/
+/*********************** Menu   ***********************************/
+/******************************************************************/
+nav#side-navigation {
+	width: 170px;
+	float: left;
+	margin-bottom: 3em;
+}
+
+    nav#side-navigation ul { background: url('../images/side-menu-bg.png') repeat-y top left; position: relative; margin-top: 15px; margin-bottom: 30px; }
+
+        nav#side-navigation ul:after { content: " "; position: absolute; top: -15px; left: 0px; background: url("../images/side-menu-bg-top.png") no-repeat center left; width: 6px; height: 16px; }
+
+        nav#side-navigation ul:before { content: " "; position: absolute; bottom: -15px; left: 0px; background: url("../images/side-menu-bg-bot.png") no-repeat center left; width: 6px; height: 16px; }
+
+        nav#side-navigation ul li { padding: 3px 0 18px 20px; }
+
+            nav#side-navigation ul li.active { background: url('../images/side-menu-active.png') no-repeat top left; }
+
+            nav#side-navigation ul li a { text-transform: uppercase; color: #454545; text-decoration: none; }
+
+				nav#side-navigation ul li a:hover, nav#side-navigation ul li.active a {
+					font-weight: bold;
+					color: #AD1F23;
+				}
+                
+
+
+#filter-wrapper { margin: 53px 0 8px 0; }
+
+#filter { float: left; }
+
+    #filter span { text-transform: uppercase; font-weight: bold; }
+
+#bottom-pagination { margin-top: 20px;  width: 790px; }
+
+    #bottom-pagination .pagination { float: right; }
+
+    #bottom-pagination .per-page { float: left; }
+
+
+ a.nav {
+    position: absolute;
+    clip:rect(1px,1px,1px,1px);
+    overflow:hidden;
+    width:1px;
+    height:1px;
+   }
+  a.nav:focus, a.nav:active {
+    position: absolute;
+    left: .5em;
+    top: .5em;
+    background-color:lightblue;}
+	#navigation ul {
+		/*margin-left: -5%;*/
+		display: inline-block;
+		padding: 0px;
+		list-style: none;
+		overflow: hidden;
+	}
+		#navigation ul li {
+			float: left;
+		}
+#navigation ul a {
+	display: block;
+	text-decoration: none;
+	text-align: center;
+}
+
+		.clr {
+	clear: both;
+	font-size: 0;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
 }
