--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -324,6 +324,9 @@ nav#side-navigation {
     display: inline-block;
     width: 87%;
 }
+.offerPage h1 {
+    margin: 10% 0 0 30%;
+}
 .container {
     padding: 10px;
     padding-left: 5%;
