--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -361,7 +361,7 @@ nav#side-navigation {
     display: inline-grid;
 }
 .list .item.rewardsitem.image{
-    background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)),url("../images/cr-gold-card.png");
+    background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)),url("http://www.caesars.com/content/dam/caesars-rewards/card/cr-gold-card.png");
 }
 .list .listItem {
     width: 80%;
