Myrewards component changes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -361,6 +361,12 @@ nav#side-navigation {
     display: inline-grid;
 }
 
+.list .item.rewardsitem.offer{
+    height: auto;
+}
+.offer-image{
+    width:205px;
+}
 .list .listItem {
     width: 80%;
     padding: 10px;
