--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -952,3 +952,10 @@ input[type="checkbox"]:checked:after {
     top: 2px;
     left: 6px;
 }
+.amount{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    color: #484848;
+    margin-top: 15px;
+}
