--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -877,38 +877,45 @@ a.nav:active {
 .list .item p {
     font-size: 16px;
 }
-.offerFilter {
+.offerFilterAndSort {
     margin-left: 40px;
     padding: 10px;
     margin-bottom: 20px;
-    width: 90%;
+    width: 85%;
     height: 90px;
 }
-.offerFilter .propertyFilter {
+.offerFilterAndSort .propertyFilter {
     width: 25%;
     height: 70px;
     float: left;
 }
-.offerFilter .dateFilter {
+.offerFilterAndSort .dateFilter {
     width: 20%;
     height: 70px;
     float: left;
     margin-left: 20px;
 }
-.offerFilter .typeFilter {
+.offerFilterAndSort .typeFilter {
     width: 20%;
     height: 70px;
     float: left;
     margin-left: 20px;
 }
-.offerFilter .dateFilter .startDateFilter {
+.offerFilterAndSort .dateFilter .startDateFilter {
     margin-bottom: 10px;
 }
-.offerFilter .dateFilter .dateerror {
+.offerFilterAndSort .dateFilter .dateerror {
     color: red;
 }
-.offerFilter .dateFilter .dateerror.hide {
+.offerFilterAndSort .dateFilter .dateerror.hide {
     display: none;
+}
+.offerFilterAndSort .offerSorting {
+    height: 70px;
+    float: right;
+}
+.offerFilterAndSort .offerSorting .offersortingoptions {
+    height: 40px;
 }
 .tr-crimson {
     color: #ad1f23;
