--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -824,7 +824,7 @@ a.nav:active {
     height: 200px;
     margin: 10px;
     text-align: center;
-    display: inline-block;
+    float: left;
 }
 .list .item.rewardsitem {
     width: 25%;
