--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -877,25 +877,19 @@ a.nav:active {
     float: left;
 }
 .offerFilterAndSort .dateFilter {
-    width: 20%;
+    width: 35%;
     height: 70px;
     float: left;
     margin-left: 20px;
+}
+.offerFilterAndSort .dateFilter .react-google-flight-datepicker .date-picker {
+    padding: 0px;
 }
 .offerFilterAndSort .typeFilter {
     width: 20%;
     height: 70px;
     float: left;
     margin-left: 20px;
-}
-.offerFilterAndSort .dateFilter .startDateFilter {
-    margin-bottom: 10px;
-}
-.offerFilterAndSort .dateFilter .dateerror {
-    color: red;
-}
-.offerFilterAndSort .dateFilter .dateerror.hide {
-    display: none;
 }
 .offerFilterAndSort .offerSorting {
     height: 70px;
