Calling scss file from index.js and fixed font issue

--- a/public/scss/pages/_helpers.scss
+++ b/public/scss/pages/_helpers.scss
@@ -8,7 +8,7 @@
 	font-family: 'Montserrat Regular';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Regular"), url("../fonts/Montserrat-Regular.woff") format('woff');
+	src: url("../fonts/Montserrat-Regular.woff") format('woff');
 }
 	
 	
@@ -16,7 +16,7 @@
 	font-family: 'Montserrat Italic';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Italic"),url("../fonts/Montserrat-Italic.woff") format('woff');
+	src: url("../fonts/Montserrat-Italic.woff") format('woff');
 	}
 	
 	
@@ -24,7 +24,7 @@
 	font-family: 'Montserrat Thin';
 	font-style: normal;
 	font-weight: normal;
-	src:url("../fonts/Montserrat Thin"), url("../fonts/Montserrat-Thin.woff") format('woff');
+	src:url("../fonts/Montserrat-Thin.woff") format('woff');
 	}
 	
 	
@@ -32,7 +32,7 @@
 	font-family: 'Montserrat Thin Italic';
 	font-style: normal;
 	font-weight: normal;
-	src:url("../fonts/Montserrat Thin Italic"), url("../fonts/Montserrat-ThinItalic.woff") format('woff');
+	src:url("../fonts/Montserrat-ThinItalic.woff") format('woff');
 	}
 	
 	
@@ -40,7 +40,7 @@
 	font-family: 'Montserrat ExtraLight';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat ExtraLight"), url("../fonts/Montserrat-ExtraLight.woff") format('woff');
+	src: url("../fonts/Montserrat-ExtraLight.woff") format('woff');
 	}
 	
 	
@@ -48,7 +48,7 @@
 	font-family: 'Montserrat ExtraLight Italic';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat ExtraLight Italic"), url("../fonts/Montserrat-ExtraLightItalic.woff") format('woff');
+	src: url("../fonts/Montserrat-ExtraLightItalic.woff") format('woff');
 	}
 	
 	
@@ -56,7 +56,7 @@
 	font-family: 'Montserrat Light';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Light"), url("../fonts/Montserrat-Light.woff") format('woff');
+	src: url("../fonts/Montserrat-Light.woff") format('woff');
 	}
 	
 	
@@ -64,7 +64,7 @@
 	font-family: 'Montserrat Light Italic';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Light Italic"), url("../fonts/Montserrat-LightItalic.woff") format('woff');
+	src: url("../fonts/Montserrat-LightItalic.woff") format('woff');
 	}
 	
 	
@@ -72,7 +72,7 @@
 	font-family: 'Montserrat Medium';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Medium"), url("../fonts/Montserrat-Medium.woff") format('woff');
+	src: url("../fonts/Montserrat-Medium.woff") format('woff');
 	}
 	
 	
@@ -80,7 +80,7 @@
 	font-family: 'Montserrat Medium Italic';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Medium Italic"), url("../fonts/Montserrat-MediumItalic.woff") format('woff');
+	src: url("../fonts/Montserrat-MediumItalic.woff") format('woff');
 	}
 	
 	
@@ -88,7 +88,7 @@
 	font-family: 'Montserrat SemiBold';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat SemiBold"), url("../fonts/Montserrat-SemiBold.woff") format('woff');
+	src: url("../fonts/Montserrat-SemiBold.woff") format('woff');
 	}
 	
 	
@@ -96,7 +96,7 @@
 	font-family: 'Montserrat SemiBold Italic';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat SemiBold Italic"), url("../fonts/Montserrat-SemiBoldItalic.woff") format('woff');
+	src: url("../fonts/Montserrat-SemiBoldItalic.woff") format('woff');
 	}
 	
 	
@@ -104,7 +104,7 @@
 	font-family: 'Montserrat Bold';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Bold"), url("../fonts/Montserrat-Bold.woff") format('woff');
+	src: url("../fonts/Montserrat-Bold.woff") format('woff');
 	}
 	
 	
@@ -112,7 +112,7 @@
 	font-family: 'Montserrat Bold Italic';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Bold Italic"), url("../fonts/Montserrat-BoldItalic.woff") format('woff');
+	src: url("../fonts/Montserrat-BoldItalic.woff") format('woff');
 	}
 	
 	
@@ -120,7 +120,7 @@
 	font-family: 'Montserrat ExtraBold';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat ExtraBold"), url("../fonts/Montserrat-ExtraBold.woff") format('woff');
+	src: url("../fonts/Montserrat-ExtraBold.woff") format('woff');
 	}
 	
 	
@@ -128,7 +128,7 @@
 	font-family: 'Montserrat ExtraBold Italic';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat ExtraBold Italic"), url("../fonts/Montserrat-ExtraBoldItalic.woff") format('woff');
+	src: url("../fonts/Montserrat-ExtraBoldItalic.woff") format('woff');
 	}
 	
 	
@@ -136,7 +136,7 @@
 	font-family: 'Montserrat Black';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Black"), url("../fonts/Montserrat-Black.woff") format('woff');
+	src: url("../fonts/Montserrat-Black.woff") format('woff');
 	}
 	
 	
@@ -144,7 +144,7 @@
 	font-family: 'Montserrat Black Italic';
 	font-style: normal;
 	font-weight: normal;
-	src: url("../fonts/Montserrat Black Italic"),url("../fonts/Montserrat-BlackItalic.woff") format('woff');
+	src: url("../fonts/Montserrat-BlackItalic.woff") format('woff');
 	}
 
 	@font-face {
