Fixed image path

--- a/src/scss/pages/_filter.scss
+++ b/src/scss/pages/_filter.scss
@@ -18,7 +18,7 @@
 			&:before{
 				position: absolute;
 				content: "";
-				background: url(../images/sprite.png) no-repeat -7px -6px;
+				background: url(/images/sprite.png) no-repeat -7px -6px;
 				width: 15px;
 				height: 10px;
 				top: 5px;
