Navigation Selected li style changes

--- a/src/scss/pages/_sidebar.scss
+++ b/src/scss/pages/_sidebar.scss
@@ -135,14 +135,12 @@
 				}
 			}
 		}
-		&.selected{
-			> a{
+		&> a.selected{
 				background: $custome-secondary;
 				color:$custome-white;
 				i{
 					-webkit-text-stroke-color: #fff;
 				} 
-			}
 		}
 
 	}
