--- a/src/css/main.css
+++ b/src/css/main.css
@@ -103,92 +103,92 @@ nav .navbar-collapse .nav-link {
   font-family: 'Montserrat Regular';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Regular"), url("../fonts/Montserrat-Regular.woff") format("woff"); }
+  src: url("../fonts/Montserrat-Regular.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Italic"), url("../fonts/Montserrat-Italic.woff") format("woff"); }
+  src: url("../fonts/Montserrat-Italic.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Thin';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Thin"), url("../fonts/Montserrat-Thin.woff") format("woff"); }
+  src: url("../fonts/Montserrat-Thin.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Thin Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Thin Italic"), url("../fonts/Montserrat-ThinItalic.woff") format("woff"); }
+  src:  url("../fonts/Montserrat-ThinItalic.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat ExtraLight';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat ExtraLight"), url("../fonts/Montserrat-ExtraLight.woff") format("woff"); }
+  src: url("../fonts/Montserrat-ExtraLight.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat ExtraLight Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat ExtraLight Italic"), url("../fonts/Montserrat-ExtraLightItalic.woff") format("woff"); }
+  src: url("../fonts/Montserrat-ExtraLightItalic.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Light';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Light"), url("../fonts/Montserrat-Light.woff") format("woff"); }
+  src: url("../fonts/Montserrat-Light.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Light Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Light Italic"), url("../fonts/Montserrat-LightItalic.woff") format("woff"); }
+  src: url("../fonts/Montserrat-LightItalic.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Medium';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Medium"), url("../fonts/Montserrat-Medium.woff") format("woff"); }
+  src: url("../fonts/Montserrat-Medium.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Medium Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Medium Italic"), url("../fonts/Montserrat-MediumItalic.woff") format("woff"); }
+  src: url("../fonts/Montserrat-MediumItalic.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat SemiBold';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat SemiBold"), url("../fonts/Montserrat-SemiBold.woff") format("woff"); }
+  src: url("../fonts/Montserrat-SemiBold.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat SemiBold Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat SemiBold Italic"), url("../fonts/Montserrat-SemiBoldItalic.woff") format("woff"); }
+  src: url("../fonts/Montserrat-SemiBoldItalic.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Bold';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Bold"), url("../fonts/Montserrat-Bold.woff") format("woff"); }
+  src: url("../fonts/Montserrat-Bold.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Bold Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Bold Italic"), url("../fonts/Montserrat-BoldItalic.woff") format("woff"); }
+  src: url("../fonts/Montserrat-BoldItalic.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat ExtraBold';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat ExtraBold"), url("../fonts/Montserrat-ExtraBold.woff") format("woff"); }
+  src: url("../fonts/Montserrat-ExtraBold.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat ExtraBold Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat ExtraBold Italic"), url("../fonts/Montserrat-ExtraBoldItalic.woff") format("woff"); }
+  src: url("../fonts/Montserrat-ExtraBoldItalic.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Black';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Black"), url("../fonts/Montserrat-Black.woff") format("woff"); }
+  src: url("../fonts/Montserrat-Black.woff") format("woff"); }
 @font-face {
   font-family: 'Montserrat Black Italic';
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Montserrat Black Italic"), url("../fonts/Montserrat-BlackItalic.woff") format("woff"); }
+  src: url("../fonts/Montserrat-BlackItalic.woff") format("woff"); }
 @font-face {
   font-family: OpenSans-Bold;
   src: url("../fonts/OpenSans-Bold.ttf"); }
