--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,8 +5,11 @@
 @import "pages/helpers";
 @import "pages/sidebar";
 @import "pages/form";
+@import "pages/sort";
 @import "pages/filter";
 @import "pages/listing";
+@import "pages/reward-box";
+@import "pages/reward-progress";
 @import "pages/footer";
 
 
