--- a/src/scss/pages/_listing.scss
+++ b/src/scss/pages/_listing.scss
@@ -63,3 +63,34 @@
 	}
 }
 
+.listing--reward{
+	.listing-wrap{
+		padding: 15px 5px;
+		-webkit-box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.30);
+		-moz-box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.30);
+		box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.30);
+	}
+	h3{
+		font-size: 17px;
+		margin-bottom: 15px;
+	}
+	.listing__details{
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 20px;
+		h2{
+			width: 270px;
+		}
+		.rate{
+			font-size: 25px;
+			color: $custome-secondary;
+		}
+	}
+	.btn-wrap-double{
+		display: flex;
+		.button{
+			width: 100%;
+			margin: 0 2px;
+		}
+	}
+}
