myrewards main scss changes

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "pages/filter";
 @import "pages/listing";
 @import "pages/footer";
-
+@import "pages/reward-box";
+@import "pages/reward-progress";
 
 
