--- a/src/scss/pages/_form.scss
+++ b/src/scss/pages/_form.scss
@@ -63,6 +63,9 @@
 			pointer-events: none;
 		}
 	}
+	.txtbox-wrap{
+		position: relative;
+	}
 
 	.form-control-placeholder {
 		position: absolute;
