--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 @import "pages/helpers";
 @import "pages/sidebar";
 @import "pages/form";
-@import "pages/sort";
+@import "pages/selectlist";
 @import "pages/multiselect";
 @import "pages/listing";
 @import "pages/footer";
