--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -484,6 +484,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 			margin-bottom: 15px;
 		}
 	}
+	.sort{ 
+		margin-left: auto;
+		margin-right: 5px;
+	}
 }
 
 .close{
