--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,7 @@
 @import "pages/sidebar";
 @import "pages/form";
 @import "pages/selectlist";
-@import "pages/multiselect";
+@import "pages/multiselectlist";
 @import "pages/listing";
 @import "pages/footer";
 @import "pages/reward-box";
