--- a/src/scss/pages/_multiselectlist.scss
+++ b/src/scss/pages/_multiselectlist.scss
@@ -1,7 +1,7 @@
-//multiselect starts here
-.multiselect{
+//multiselectlist starts here
+.multiselectlist{
 	position: relative;
-	.multiselect-wrap{
+	.multiselectlist-wrap{
 		&:after{
 			@include fontawesome;
 			right: 14px;
@@ -26,7 +26,7 @@
 			opacity: 0.5;
 		}
 	}
-	.multiselect-content{
+	.multiselectlist-content{
 		background: $custome-white;
 		position: absolute;
 		width: 335px;
@@ -58,7 +58,7 @@
 				margin: 0 0 15px 0;
 			}
 		}
-		.multiselect__btn{
+		.multiselectlist__btn{
 			background: #f1f1f6;
 			padding: 10px;
 			text-align: right;
