Changed textbox component to separate component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "pages/helpers";
 @import "pages/sidebar";
 @import "pages/form";
+@import "pages/textbox";
 @import "pages/selectlist";
 @import "pages/multiselectlist";
 @import "pages/listing";
