--- a/src/scss/pages/_form.scss
+++ b/src/scss/pages/_form.scss
@@ -7,13 +7,13 @@
 	input::-webkit-calendar-picker-indicator {
 		opacity: 0;
 	 }
-	ul{
+	>ul{
 		display: flex;
 		align-items: center;
 		@include break-point(1023px){
 			flex-wrap: wrap;
 		}
-		li{
+		>li{
 			margin-right: 10px;
 			width: 100%;
 			@include break-point(1299px){
@@ -28,12 +28,6 @@
 			}
 			@include break-point(767px){
 				width: 100%;
-			}
-			&:last-child{
-				width: 50%;
-				@include break-point(1023px){
-					width: 100%;
-				}
 			}
 		}
 	}
