--- a/src/scss/pages/_helpers.scss
+++ b/src/scss/pages/_helpers.scss
@@ -230,6 +230,7 @@ i{
 	border:none;
 	color:$custome-white;
 	font-size: 13px;
+	text-align: center;
 	text-transform:uppercase;
 	transition: all 0.2s ease 0s;
 	border:none;
@@ -240,6 +241,7 @@ i{
 	&:hover{
 		background: $custome-white;
 		color: $custome-secondary; 
+		text-decoration: none;
 	}
 		&.button--black{
 			background: $custome-black;
@@ -326,6 +328,7 @@ select:-webkit-autofill:focus {
 	padding: 10px 0 0 13px;
 	transition: all 200ms;
 	opacity: 0.5;
+	cursor: text;
 }
 
 .checkbox-custom, .radio-custom {
@@ -395,6 +398,9 @@ select:-webkit-autofill:focus {
  *  ------------------------------------------------------ */
  .container-fluid{
 	 padding: 0 15px;
+	 @include break-point(991px){
+		padding: 0 5px;
+	}
  }
  .wrapper{
 		background: #f5f5f5;
