Adding autocomplete component <first phase>

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "pages/form";
 @import "pages/selectlist";
 @import "pages/multiselectlist";
+@import "pages/autocomplete";
 @import "pages/listing";
 @import "pages/footer";
 @import "pages/reward-box";
