AAdding autocomplete component <Added style for selected item from list>

--- a/src/scss/pages/_autocomplete.scss
+++ b/src/scss/pages/_autocomplete.scss
@@ -30,5 +30,8 @@
 		li[data-highlight="true"] {
 			background-color: grey;
 		}
+		li[data-selected="true"] {
+			background-color: red;
+		}
 	}
 }
