--- a/src/scss/pages/_autocomplete.scss
+++ b/src/scss/pages/_autocomplete.scss
@@ -16,11 +16,17 @@
 		background: #fff;
 		position: absolute;
 		width: 100%;
+		height: 400px;
+		overflow-y: scroll;
 		right: 0;
 		box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 15px 0px;
 		display: none;
 		z-index: 99;
 		cursor: pointer;
+		@include break-point(991px){
+			height: auto;
+			overflow-y: visible;
+		}
 		.autocomplete__list {
 			padding: 10px 0px;
 		}
