--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "pages/selectlist";
 @import "pages/multiselectlist";
 @import "pages/autocomplete";
+@import "pages/_daterangecalendar";
 @import "pages/listing";
 @import "pages/footer";
 @import "pages/reward-box";
