Added date range picker component <Added active class>

--- a/src/scss/pages/_searchcalendar.scss
+++ b/src/scss/pages/_searchcalendar.scss
@@ -45,6 +45,9 @@
 				cursor: pointer;
 				border: 1px solid black;
 			}
+			li.month-item.active {
+				background-color: rgb(173, 31, 35);
+			}
 		}
 	}
 	.close{
