Added date range picker component <Style issue fix>

--- a/src/scss/pages/_searchcalendar.scss
+++ b/src/scss/pages/_searchcalendar.scss
@@ -46,7 +46,7 @@
 				border: 1px solid black;
 			}
 			li.month-item.active {
-				background-color: rgb(173, 31, 35);
+				background-color: rgba(237, 84, 52, 0.75);
 			}
 		}
 	}
