--- a/src/scss/pages/_autocomplete.scss
+++ b/src/scss/pages/_autocomplete.scss
@@ -13,7 +13,7 @@
 		display : block;
 	}
 	.autocomplete-content {
-		background: #fff;
+		background: $custome-white;
 		position: absolute;
 		width: 100%;
 		height: 400px;
@@ -24,42 +24,82 @@
 		z-index: 99;
 		cursor: pointer;
 		@include break-point(991px){
-			height: auto;
-			overflow-y: visible;
+			height: 100vh;
+			overflow-y: scroll;
 		}
 		.autocomplete__list {
 			padding: 10px 0px;
 		}
 		li {
-			padding-left: 20px;
-			height: 35px;
+			padding: 10px 0 10px 20px;
+			&:hover{
+				background:#f1f1f6;
+			}
 			span{
 				margin-left: 20px;
+				font-size: 14px;
+				color: #343840;
+				display: block;
+			}
+			&.highlight{
+				span{
+					margin-left: 0px;
+					text-transform: uppercase;
+					position: relative;
+					padding-left: 9px;
+					&:before{
+						@include fontawesome;
+						content: "\f041";
+						left:-8px;
+						top:-4px;
+						font-size:18px;
+						color: #343840;
+					}
+				}
+			}
+			&[data-display="false"] { 
+				display : none 
+			}
+			&[data-display="true"] { 
+				display : inherit 
+			}
+			&[data-highlight="false"] {
+				background-color: none;
+			}
+			&[data-highlight="true"] {
+				background-color: rgb(241, 241, 246);;
+			}
+			&[data-selected="true"] {
+				font-family: 'Montserrat Bold';
 			}
 		}
-		li:hover {
-			background-color: rgb(241, 241, 246);
-		}
-		li.highlight {
-			span{
-				margin-left: 0px;
-				text-transform: uppercase;
+	}
+	@include break-point(991px){
+		&.autocomplete--open{
+			background: #fff;
+			position: fixed;
+			top: 0;
+			z-index: 9999;
+			width: 100%;
+			left: 0;
+			padding: 20px 10px 0 10px;
+			.txt{
+				border: none;
+				border-bottom: #ced4da solid 1px;
+				&:focus{
+					border: none;
+					border-bottom: #ced4da solid 1px;
+					box-shadow: none;
+				}
 			}
-		}
-		li[data-display="false"] { 
-			display : none 
-		}
-		li[data-display="true"] { 
-			display : inherit 
-		}
-		li[data-highlight="false"] {
-			background-color: none;
-		}
-		li[data-highlight="true"] {
-			background-color: rgb(241, 241, 246);;
-		}
-		li[data-selected="true"] {
-			font-weight: bold;
+			.select-wrap{
+				&:after{
+					display: none;
+				}
+			}
+			.close {
+				z-index: 9;
+			}
 		}
 	}
 }
