Added style for offer details page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "pages/autocomplete";
 @import "pages/searchcalendar";
 @import "pages/listing";
+@import "pages/offerdetails";
 @import "pages/footer";
 @import "pages/reward-box";
 @import "pages/reward-progress";
