--- a/src/scss/pages/_autocomplete.scss
+++ b/src/scss/pages/_autocomplete.scss
@@ -16,7 +16,7 @@
 		background: $custome-white;
 		position: absolute;
 		width: 100%;
-		height: 400px;
+		max-height: 420px;
 		overflow-y: scroll;
 		right: 0;
 		box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 15px 0px;
