--- a/src/scss/pages/_autocomplete.scss
+++ b/src/scss/pages/_autocomplete.scss
@@ -17,18 +17,22 @@
 		position: absolute;
 		width: 100%;
 		max-height: 420px;
-		overflow-y: scroll;
+		overflow-y: auto;
 		right: 0;
 		box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 15px 0px;
 		display: none;
 		z-index: 99;
 		cursor: pointer;
 		@include break-point(991px){
+			max-height: none;
 			height: 100vh;
 			overflow-y: scroll;
 		}
 		.autocomplete__list {
 			padding: 10px 0px;
+			@include break-point(991px) {
+				padding-bottom: 100px;
+			}
 		}
 		li {
 			padding: 10px 0 10px 20px;
