--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,7 +10,7 @@
 @import "pages/autocomplete";
 @import "pages/searchcalendar";
 @import "pages/listing";
-@import "pages/offerdetails";
+@import "pages//offer-details";
 @import "pages/footer";
 @import "pages/reward-box";
 @import "pages/reward-progress";
