Offer details page issue fix

--- a/src/scss/pages/_offer-details.scss
+++ b/src/scss/pages/_offer-details.scss
@@ -41,9 +41,22 @@
 			}
 		}
 		.details-propertyselect{
+			position: relative;
 			width: 60%;
 			display: inline-block;
 			margin-right: 10px;
+			@include break-point(991px){
+				width: 70%;
+			}
+		}
+		li.autocomplete__item.highlight.disabled {
+			pointer-events: none;
+			opacity: 0.6;
+			cursor: text;
+			color: gray;
+		}
+		.button {
+			bottom: 5px;
 		}
 	}
 	.details-info{
