--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -43,6 +43,7 @@ header{
 				}
 				.username{
 					font-size:$primary-fontsize;
+					font-weight: bold;
 					color: $custome-white;
 					margin:6px 12px;
 					position:relative;
