--- a/src/scss/pages/_listing.scss
+++ b/src/scss/pages/_listing.scss
@@ -1,13 +1,20 @@
 //listing  starts here
 .listing{
-	.listing-wrap{	
-		margin: 0 0 10px;
+	li {
+		margin-bottom: 15px;
+	}
+	.listing-wrap{
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		height: 100%;
 		background: #fff;
 		padding: 5px;
 		box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 4px;
 	}
 	.listing__img{
 		position: relative;
+		overflow: hidden;
 		margin-bottom: 20px;
 		@include break-point(767px){
 			margin-bottom: 10px;
@@ -53,10 +60,10 @@
 				margin-bottom: 10px;
 			}
 		}
-		.button{
-			width: 100%;
-			display: block;
-		}
+	}
+	.button{
+		width: 100%;
+		display: block;
 	}
 }
 
